--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "dsp-fft",
-  "version": "1.0.0",
+  "version" : "0.0.0-semantically-released",
   "description": "Provides FFT and DFT libraries for Digital Signal Processing.",
   "main": "src/fft.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "commit" : "git-cz",
+    "test": "mocha test/test.js -w",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kunwar-rahul/dsp-fft.git"
+    "url": "https://github.com/kunwar-rahul/dsp-fft.git"
   },
   "keywords": [
     "dsp",
@@ -21,5 +23,15 @@
   "bugs": {
     "url": "https://github.com/kunwar-rahul/dsp-fft/issues"
   },
-  "homepage": "https://github.com/kunwar-rahul/dsp-fft#readme"
+  "homepage": "https://github.com/kunwar-rahul/dsp-fft#readme",
+  "devDependencies": {
+    "chai": "3.5.0",
+    "commitizen": "2.7.2",
+    "cz-conventional-changelog": "1.1.5",
+    "mocha": "2.4.5",
+    "semantic-release": "^4.3.5"
+  },
+  "czConfig" : {
+    "path" : "node_modules/cz-conventional-changelog"
+  }
 }
