--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dsp-fft",
-  "version": "0.0.0-semantically-released",
+  "version": "1.1.0",
   "description": "Provides FFT and DFT libraries for Digital Signal Processing.",
   "main": "src/fft.js",
   "scripts": {
